2010-11-10  Sergio Martin <sergio.martin@artica.es>

	* include/functions_reporting.php
	include/functions.php
	operation/reporting/reporting_xml.php
	godmode/reporting/reporting_builder.item_editor.php: Added the
	simple baseline graph to the html and xml report exports

2010-11-08  Sancho Lerena <slerena@artica.es>

	* pandora_console.spec: Updated version/build.

	* extensions/update_manager/sql/update_manager.sql: Change URL of 
	update manager to 3.2

	* pandora_console.redhat.spec: Updated version/build

2010-11-08  Raúl Mateos <raulofpandora@gmail.com>

	* extras/pandoradb_migrate_v3.1_to_v3.2.sql: Updated database schema
	version when updating database.

	* extras/pandora_diag.php: Small update.

2010-11-08  Raúl Mateos <raulofpandora@gmail.com>

	* pandora_console_install: Updated year/version and link to update script

	* extras/pandoradb_migrate_v3.1_to_v3.2.sql: Updated news to 3.2 version.

2010-11-08  Raúl Mateos <raulofpandora@gmail.com>

	* pandoradb.sql. pandoradb_data.sql, pandora_console_install: Updated
	year/version

2010-11-07  Raúl Mateos <raulofpandora@gmail.com>

	* DEBIAN/makde_deb_package.sh, DEBIAN/control: Updated year/version	

2010-11-05  Sergio Martin <sergio.martin@artica.es>

	* include/languages/nb.po
	include/languages/en.po
	include/languages/mr.po
	include/languages/nb.mo
	include/languages/en.mo
	include/languages/mr.mo: Added few new language
	po and mo files

2010-11-05  Sergio Martin <sergio.martin@artica.es>

	* include/languages/cs.po
	include/languages/et.mo
	include/languages/pt_BR.po
	include/languages/nl.mo
	include/languages/es.po
	include/languages/pl.mo
	include/languages/it.mo
	include/languages/ko.po
	include/languages/sl.mo
	include/languages/sk.po
	include/languages/uk.po
	include/languages/ro.po
	include/languages/pt.mo
	include/languages/ast.mo
	include/languages/en_AU.mo
	include/languages/bg.mo
	include/languages/index.pot
	include/languages/bn.po
	include/languages/ar.po
	include/languages/cs.mo